--- a/.build/package.nuspec
+++ b/.build/package.nuspec
@@ -9,7 +9,7 @@
 		<projectUrl>https://github.com/shuttle/Shuttle.Core.Ninject</projectUrl>
 		<iconUrl>https://raw.githubusercontent.com/Shuttle/Shuttle.Core.Ninject/master/.media/logo.png</iconUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
-		<description>Ninject Kernel implementation of the Shuttle.Core.Infrastructure.IComponentContainer interface. </description>
+		<description>Ninject Kernel implementation of the Shuttle.Core.Infrastructure dependency injection interfaces.</description>
 		<releaseNotes/>
 		<copyright>Copyright (c) {year}, Eben Roux</copyright>
     <tags>Shuttle.Core Ninject</tags>
