--- a/Shuttle.Core.Ninject.Tests/Shuttle.Core.Ninject.Tests.csproj
+++ b/Shuttle.Core.Ninject.Tests/Shuttle.Core.Ninject.Tests.csproj
@@ -39,21 +39,19 @@
       <HintPath>..\packages\NUnit.3.5.0\lib\net40\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Shuttle.Core.Infrastructure, Version=4.2.33.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Shuttle.Core.Infrastructure.4.2.33\lib\net40-full\Shuttle.Core.Infrastructure.dll</HintPath>
+    <Reference Include="Shuttle.Core.ComponentContainer.Tests, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Shuttle.Core.ComponentContainer.Tests.1.0.1\lib\net40-full\Shuttle.Core.ComponentContainer.Tests.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Shuttle.Core.Infrastructure, Version=4.2.43.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Shuttle.Core.Infrastructure.4.2.43\lib\net40-full\Shuttle.Core.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DoSomething.cs" />
-    <Compile Include="DoSomethingWithDependency.cs" />
-    <Compile Include="IDoSomething.cs" />
-    <Compile Include="INotRegistered.cs" />
-    <Compile Include="ISomeDependency.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SomeDependency.cs" />
     <Compile Include="NinjectComponentContainerFixture.cs" />
   </ItemGroup>
   <ItemGroup>
