--- a/Shuttle.Core.Ninject.Tests/packages.config
+++ b/Shuttle.Core.Ninject.Tests/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Ninject" version="3.2.2.0" targetFramework="net40" />
   <package id="NUnit" version="3.5.0" targetFramework="net40" />
-  <package id="Shuttle.Core.Infrastructure" version="4.2.33" targetFramework="net40" />
+  <package id="Shuttle.Core.ComponentContainer.Tests" version="1.0.1" targetFramework="net40" />
+  <package id="Shuttle.Core.Infrastructure" version="4.2.43" targetFramework="net40" />
 </packages>
