--- a/Shuttle.Core.Ninject/.build/package.nuspec
+++ b/Shuttle.Core.Ninject/.build/package.nuspec
@@ -9,6 +9,7 @@
     <licenseUrl>https://github.com/shuttle/Shuttle.Core.Ninject/raw/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/shuttle/Shuttle.Core.Ninject</projectUrl>
     <iconUrl>https://raw.githubusercontent.com/Shuttle/Shuttle.Core.Ninject/master/.media/logo.png</iconUrl>
+    <repository type="git" url="https://github.com/Shuttle/Shuttle.Core.Ninject.git" />
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Ninject Kernel implementation of the Shuttle.Core.Container dependency injection interfaces</description>
     <releaseNotes />
