--- a/Shuttle.Core.Ninject/Shuttle.Core.Ninject.csproj
+++ b/Shuttle.Core.Ninject/Shuttle.Core.Ninject.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net46;net461;net462;net47;net471;netstandard2.0;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net46;net461;net462;net47;net471;netstandard2.0;netcoreapp2.0;netcoreapp2.1</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ninject" Version="3.3.4" />
-    <PackageReference Include="Shuttle.Core.Container" Version="10.0.5" />
+    <PackageReference Include="Shuttle.Core.Container" Version="10.0.8" />
   </ItemGroup>
 
 </Project>
