--- a/Shuttle.Core.Ninject/.build/package.nuspec
+++ b/Shuttle.Core.Ninject/.build/package.nuspec
@@ -1,14 +1,13 @@
 <?xml version="1.0"?>
-
 <package>
   <metadata>
     <id>Shuttle.Core.Ninject</id>
     <version>{semver}</version>
     <authors>Eben Roux</authors>
     <owners>Eben Roux</owners>
-    <licenseUrl>https://github.com/shuttle/Shuttle.Core.Ninject/raw/master/LICENSE</licenseUrl>
+    <license type="expression">BSD-3-Clause</license>
     <projectUrl>https://github.com/shuttle/Shuttle.Core.Ninject</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/Shuttle/Shuttle.Core.Ninject/master/.media/logo.png</iconUrl>
+    <icon>images\logo.png</icon>
     <repository type="git" url="https://github.com/Shuttle/Shuttle.Core.Ninject.git" />
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Ninject Kernel implementation of the Shuttle.Core.Container dependency injection interfaces</description>
@@ -20,4 +19,8 @@
       <dependency id="Ninject" version="{Ninject-version}" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="..\..\..\..\.media\logo.png" target="images\" />
+	<file src="lib\**\*.*" target="lib" />
+  </files>
 </package>
