--- a/Shuttle.Core.Ninject/Shuttle.Core.Ninject.csproj
+++ b/Shuttle.Core.Ninject/Shuttle.Core.Ninject.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netstandard2.0;netcoreapp2.1</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Ninject" Version="3.3.4" />
-    <PackageReference Include="Shuttle.Core.Container" Version="11.1.3" />
+    <PackageReference Include="Shuttle.Core.Container" Version="12.0.0" />
   </ItemGroup>
 
 </Project>
